# blink

./: .gitignore  CLAUDE.md  README.md  eim_config.toml  sdkconfig.defaults
.playwright-mcp/: page-2026-05-22T18-04-45-604Z.yml  page-2026-05-22T18-05-02-500Z.yml  page-2026-05-22T18-05-11-694Z.yml  page-2026-05-22T18-05-20-330Z.yml  page-2026-05-22T18-05-34-011Z.yml  page-2026-05-22T18-05-44-685Z.yml  page-2026-05-22T18-05-54-293Z.yml  page-2026-05-22T18-06-04-004Z.yml  page-2026-05-22T18-06-13-050Z.yml
docs/: audio-playback-plan.md  dev-prod-build-and-power.md
main/: CMakeLists.txt  blink_example_main.c  clock.c  clock.h  display.c  display.h  idf_component.yml  led.c  led.h  main.c  sd.c  sd.h  web.c  web.h  wifi.c  wifi.h
main/tools/: gzip_file.py
main/web_assets/: app.js  index.html  style.css
